@@ -6,12 +6,13 @@ import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.util.ArrayList;
 import java.util.List;
+import org.apache.poi.ss.usermodel.Cell;
+import org.apache.poi.ss.usermodel.CellType;
 import org.apache.poi.ss.usermodel.Row;
 import org.apache.poi.xssf.usermodel.XSSFSheet;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
 
 public class ListQuizDao implements QuizDao {
-
   private static final String DEFAULT_DATANAME = "quizs";
   private int seqNo;
   private List<Quiz> quizList = new ArrayList<>();
@@ -25,57 +26,67 @@ public class ListQuizDao implements QuizDao {
   public ListQuizDao(String path, String dataName) {
     this.path = path;
     this.dataName = dataName;
-
     try (XSSFWorkbook workbook = new XSSFWorkbook(path)) {
       XSSFSheet sheet = workbook.getSheet(dataName);
-
-      for (int i = 1; i <= sheet.getLastRowNum(); i++) {
+      for (int i = 1; i <= sheet.getLastRowNum() ; i++){
         Row row = sheet.getRow(i);
         try {
           Quiz quiz = new Quiz();
-          quiz.setNo(Integer.parseInt(row.getCell(0).getStringCellValue()));
-          quiz.setNumber(Integer.parseInt(row.getCell(1).getStringCellValue()));
-          quiz.setAnswer(row.getCell(2).getStringCellValue());
-
+          quiz.setNo(getIntValue(row.getCell(0)));
+          quiz.setNumber(getIntValue(row.getCell(1)));
+          quiz.setAnswer(getStringValue(row.getCell(2)));
           quizList.add(quiz);
-
         } catch (Exception e) {
-          System.out.printf("%s 번의 데이터 형식이 맞지 않습니다.\n", row.getCell(0).getStringCellValue());
+          System.out.printf("%d 번의 데이터 형식이 맞지 않습니다.\n", i);
         }
       }
-
-      seqNo = quizList.getLast().getNo();
-
+      if (!quizList.isEmpty()) {
+        seqNo = quizList.get(quizList.size() - 1).getNo();
+      }
     } catch (Exception e) {
       System.out.println("퀴즈 데이터 로딩 중 오류 발생!");
       e.printStackTrace();
     }
   }
 
+  private int getIntValue(Cell cell) {
+    if (cell.getCellType() == CellType.NUMERIC) {
+      return (int) cell.getNumericCellValue();
+    } else {
+      return Integer.parseInt(cell.getStringCellValue());
+    }
+  }
+
+  private String getStringValue(Cell cell) {
+    if (cell.getCellType() == CellType.STRING) {
+      return cell.getStringCellValue();
+    } else {
+      return String.valueOf((int) cell.getNumericCellValue());
+    }
+  }
+
   public void save() throws Exception {
     try (FileInputStream in = new FileInputStream(path);
         XSSFWorkbook workbook = new XSSFWorkbook(in)) {
-
       int sheetIndex = workbook.getSheetIndex(dataName);
       if (sheetIndex != -1) {
         workbook.removeSheetAt(sheetIndex);
       }
-
       XSSFSheet sheet = workbook.createSheet(dataName);
 
       // 셀 이름 출력
-      String[] cellHeaders = {"no", "number", "answer"};
+      String[] cellHeaders = {"no", "number", "answer", "topic", "hint"};
       Row headerRow = sheet.createRow(0);
       for (int i = 0; i < cellHeaders.length; i++) {
-        headerRow.createCell(i).setCellValue(cellHeaders[i]);
+        headerRow.createCell(i).setCellValue(i);
       }
 
       // 데이터 저장
       int rowNo = 1;
       for (Quiz quiz : quizList) {
         Row dataRow = sheet.createRow(rowNo++);
-        dataRow.createCell(0).setCellValue(String.valueOf(quiz.getNo()));
-        dataRow.createCell(1).setCellValue(String.valueOf(quiz.getNumber()));
+        dataRow.createCell(0).setCellValue(quiz.getNo());
+        dataRow.createCell(1).setCellValue(quiz.getNumber());
         dataRow.createCell(2).setCellValue(quiz.getAnswer());
       }
 
@@ -98,7 +109,7 @@ public class ListQuizDao implements QuizDao {
 
   @Override
   public List<Quiz> list() throws Exception {
-    return quizList.stream().toList();
+    return new ArrayList<>(quizList);
   }
 
   @Override
@@ -117,21 +128,12 @@ public class ListQuizDao implements QuizDao {
     if (index == -1) {
       return false;
     }
-
     quizList.set(index, quiz);
     return true;
   }
 
   @Override
   public boolean delete(int no) throws Exception {
-    int index = quizList.indexOf(new Quiz(no));
-    if (index == -1) {
-      return false;
-    }
-
-    quizList.remove(index);
-    return true;
+    return quizList.removeIf(quiz -> quiz.getNo() == no);
   }
-
-
 }
